docs/1.7/Pod.md
# Pod

* [proxy operations](#proxy)
* [read operations](#read)
* [write operations](#write)
* [misc operations](#misc)

## proxy

### api.v1.namespaces(namespace).pods(name).proxy(path).get

connect GET requests to proxy of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |
| `path` | path to the resource |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.path` | Path is the URL path to use for the current proxy request to pod. |

### api.v1.namespaces(namespace).pods(name).proxy(path).delete

connect DELETE requests to proxy of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |
| `path` | path to the resource |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.path` | Path is the URL path to use for the current proxy request to pod. |

### api.v1.namespaces(namespace).pods(name).proxy(path).options

connect OPTIONS requests to proxy of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |
| `path` | path to the resource |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.path` | Path is the URL path to use for the current proxy request to pod. |

### api.v1.namespaces(namespace).pods(name).proxy(path).patch

connect PATCH requests to proxy of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |
| `path` | path to the resource |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.path` | Path is the URL path to use for the current proxy request to pod. |

### api.v1.namespaces(namespace).pods(name).proxy(path).post

connect POST requests to proxy of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |
| `path` | path to the resource |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.path` | Path is the URL path to use for the current proxy request to pod. |

### api.v1.namespaces(namespace).pods(name).proxy(path).put

connect PUT requests to proxy of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |
| `path` | path to the resource |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.path` | Path is the URL path to use for the current proxy request to pod. |

### api.v1.namespaces(namespace).pods(name).proxy.get

connect GET requests to proxy of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.path` | Path is the URL path to use for the current proxy request to pod. |

### api.v1.namespaces(namespace).pods(name).proxy.delete

connect DELETE requests to proxy of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.path` | Path is the URL path to use for the current proxy request to pod. |

### api.v1.namespaces(namespace).pods(name).proxy.options

connect OPTIONS requests to proxy of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.path` | Path is the URL path to use for the current proxy request to pod. |

### api.v1.namespaces(namespace).pods(name).proxy.patch

connect PATCH requests to proxy of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.path` | Path is the URL path to use for the current proxy request to pod. |

### api.v1.namespaces(namespace).pods(name).proxy.post

connect POST requests to proxy of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.path` | Path is the URL path to use for the current proxy request to pod. |

### api.v1.namespaces(namespace).pods(name).proxy.put

connect PUT requests to proxy of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.path` | Path is the URL path to use for the current proxy request to pod. |

### api.v1.namespaces(namespace).pods(name).exec.get

connect GET requests to exec of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.command` | Command is the remote command to execute. argv array. Not executed within a shell. |
| `qs.container` | Container in which to execute the command. Defaults to only container if there is only one container in the pod. |
| `qs.stderr` | Redirect the standard error stream of the pod for this call. Defaults to true. |
| `qs.stdin` | Redirect the standard input stream of the pod for this call. Defaults to false. |
| `qs.stdout` | Redirect the standard output stream of the pod for this call. Defaults to true. |
| `qs.tty` | TTY if true indicates that a tty will be allocated for the exec call. Defaults to false. |

### api.v1.namespaces(namespace).pods(name).exec.post

connect POST requests to exec of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.command` | Command is the remote command to execute. argv array. Not executed within a shell. |
| `qs.container` | Container in which to execute the command. Defaults to only container if there is only one container in the pod. |
| `qs.stderr` | Redirect the standard error stream of the pod for this call. Defaults to true. |
| `qs.stdin` | Redirect the standard input stream of the pod for this call. Defaults to false. |
| `qs.stdout` | Redirect the standard output stream of the pod for this call. Defaults to true. |
| `qs.tty` | TTY if true indicates that a tty will be allocated for the exec call. Defaults to false. |

### api.v1.namespaces(namespace).pods(name).portforward.get

connect GET requests to portforward of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.ports` | List of ports to forward Required when using WebSockets |

### api.v1.namespaces(namespace).pods(name).portforward.post

connect POST requests to portforward of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.ports` | List of ports to forward Required when using WebSockets |

### api.v1.namespaces(namespace).pods(name).attach.get

connect GET requests to attach of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.container` | The container in which to execute the command. Defaults to only container if there is only one container in the pod. |
| `qs.stderr` | Stderr if true indicates that stderr is to be redirected for the attach call. Defaults to true. |
| `qs.stdin` | Stdin if true, redirects the standard input stream of the pod for this call. Defaults to false. |
| `qs.stdout` | Stdout if true indicates that stdout is to be redirected for the attach call. Defaults to true. |
| `qs.tty` | TTY if true indicates that a tty will be allocated for the attach call. This is passed through the container runtime so the tty is allocated on the worker node by the container runtime. Defaults to false. |

### api.v1.namespaces(namespace).pods(name).attach.post

connect POST requests to attach of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.container` | The container in which to execute the command. Defaults to only container if there is only one container in the pod. |
| `qs.stderr` | Stderr if true indicates that stderr is to be redirected for the attach call. Defaults to true. |
| `qs.stdin` | Stdin if true, redirects the standard input stream of the pod for this call. Defaults to false. |
| `qs.stdout` | Stdout if true indicates that stdout is to be redirected for the attach call. Defaults to true. |
| `qs.tty` | TTY if true indicates that a tty will be allocated for the attach call. This is passed through the container runtime so the tty is allocated on the worker node by the container runtime. Defaults to false. |

## read

### api.v1.namespaces(namespace).pods(name).log.get

read log of the specified Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.container` | The container for which to stream logs. Defaults to only container if there is one container in the pod. |
| `qs.follow` | Follow the log stream of the pod. Defaults to false. |
| `qs.limitBytes` | If set, the number of bytes to read from the server before terminating the log output. This may not display a complete final line of logging, and may return slightly more or slightly less than the specified limit. |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |
| `qs.previous` | Return previous terminated container logs. Defaults to false. |
| `qs.sinceSeconds` | A relative time in seconds before the current time from which to show logs. If this value precedes the time a pod was started, only logs since the pod start will be returned. If this value is in the future, no logs will be returned. Only one of sinceSeconds or sinceTime may be specified. |
| `qs.tailLines` | If set, the number of lines from the end of the logs to show. If not specified, logs are shown from the creation of the container or sinceSeconds or sinceTime |
| `qs.timestamps` | If true, add an RFC3339 or RFC3339Nano timestamp at the beginning of every line of log output. Defaults to false. |

### api.v1.namespaces(namespace).pods(name).status.get

read status of the specified Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

### api.v1.namespaces(namespace).pods(name).get

read the specified Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.exact` | Should the export be exact.  Exact export maintains cluster-specific fields like &#39;Namespace&#39;. |
| `qs.export` | Should this value be exported.  Export strips fields that a user can not specify. |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

### api.v1.namespaces(namespace).pods.get

list or watch objects of kind Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.fieldSelector` | A selector to restrict the list of returned objects by their fields. Defaults to everything. |
| `qs.includeUninitialized` | If true, partially initialized resources are included in the response. |
| `qs.labelSelector` | A selector to restrict the list of returned objects by their labels. Defaults to everything. |
| `qs.resourceVersion` | When specified with a watch call, shows changes that occur after that particular version of a resource. Defaults to changes from the beginning of history. When specified for list: - if unset, then the result is returned from remote storage based on quorum-read flag; - if it&#39;s 0, then we simply return what we currently have in cache, no guarantee; - if set to non zero, then the result is at least as fresh as given rv. |
| `qs.timeoutSeconds` | Timeout for the list&#x2F;watch call. |
| `qs.watch` | Watch for changes to the described resources and return them as a stream of add, update, and remove notifications. Specify resourceVersion. |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

### api.v1.watch.namespaces(namespace).pods(name).get

watch changes to an object of kind Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.fieldSelector` | A selector to restrict the list of returned objects by their fields. Defaults to everything. |
| `qs.includeUninitialized` | If true, partially initialized resources are included in the response. |
| `qs.labelSelector` | A selector to restrict the list of returned objects by their labels. Defaults to everything. |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |
| `qs.resourceVersion` | When specified with a watch call, shows changes that occur after that particular version of a resource. Defaults to changes from the beginning of history. When specified for list: - if unset, then the result is returned from remote storage based on quorum-read flag; - if it&#39;s 0, then we simply return what we currently have in cache, no guarantee; - if set to non zero, then the result is at least as fresh as given rv. |
| `qs.timeoutSeconds` | Timeout for the list&#x2F;watch call. |
| `qs.watch` | Watch for changes to the described resources and return them as a stream of add, update, and remove notifications. Specify resourceVersion. |

### api.v1.watch.namespaces(namespace).pods.get

watch individual changes to a list of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.fieldSelector` | A selector to restrict the list of returned objects by their fields. Defaults to everything. |
| `qs.includeUninitialized` | If true, partially initialized resources are included in the response. |
| `qs.labelSelector` | A selector to restrict the list of returned objects by their labels. Defaults to everything. |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |
| `qs.resourceVersion` | When specified with a watch call, shows changes that occur after that particular version of a resource. Defaults to changes from the beginning of history. When specified for list: - if unset, then the result is returned from remote storage based on quorum-read flag; - if it&#39;s 0, then we simply return what we currently have in cache, no guarantee; - if set to non zero, then the result is at least as fresh as given rv. |
| `qs.timeoutSeconds` | Timeout for the list&#x2F;watch call. |
| `qs.watch` | Watch for changes to the described resources and return them as a stream of add, update, and remove notifications. Specify resourceVersion. |

### api.v1.watch.pods.get

watch individual changes to a list of Pod

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.fieldSelector` | A selector to restrict the list of returned objects by their fields. Defaults to everything. |
| `qs.includeUninitialized` | If true, partially initialized resources are included in the response. |
| `qs.labelSelector` | A selector to restrict the list of returned objects by their labels. Defaults to everything. |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |
| `qs.resourceVersion` | When specified with a watch call, shows changes that occur after that particular version of a resource. Defaults to changes from the beginning of history. When specified for list: - if unset, then the result is returned from remote storage based on quorum-read flag; - if it&#39;s 0, then we simply return what we currently have in cache, no guarantee; - if set to non zero, then the result is at least as fresh as given rv. |
| `qs.timeoutSeconds` | Timeout for the list&#x2F;watch call. |
| `qs.watch` | Watch for changes to the described resources and return them as a stream of add, update, and remove notifications. Specify resourceVersion. |

### api.v1.pods.get

list or watch objects of kind Pod

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.fieldSelector` | A selector to restrict the list of returned objects by their fields. Defaults to everything. |
| `qs.includeUninitialized` | If true, partially initialized resources are included in the response. |
| `qs.labelSelector` | A selector to restrict the list of returned objects by their labels. Defaults to everything. |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |
| `qs.resourceVersion` | When specified with a watch call, shows changes that occur after that particular version of a resource. Defaults to changes from the beginning of history. When specified for list: - if unset, then the result is returned from remote storage based on quorum-read flag; - if it&#39;s 0, then we simply return what we currently have in cache, no guarantee; - if set to non zero, then the result is at least as fresh as given rv. |
| `qs.timeoutSeconds` | Timeout for the list&#x2F;watch call. |
| `qs.watch` | Watch for changes to the described resources and return them as a stream of add, update, and remove notifications. Specify resourceVersion. |

## write

### api.v1.namespaces(namespace).pods(name).status.patch

partially update status of the specified Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

#### Body

| Parameter | Description |
| --------- | ----------- |
| `body` | #&#x2F;definitions&#x2F;io.k8s.apimachinery.pkg.apis.meta.v1.Patch |

### api.v1.namespaces(namespace).pods(name).status.put

replace status of the specified Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

#### Body

| Parameter | Description |
| --------- | ----------- |
| `body` | #&#x2F;definitions&#x2F;io.k8s.kubernetes.pkg.api.v1.Pod |

### api.v1.namespaces(namespace).pods(name).delete

delete a Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.gracePeriodSeconds` | The duration in seconds before the object should be deleted. Value must be non-negative integer. The value zero indicates delete immediately. If this value is nil, the default grace period for the specified type will be used. Defaults to a per object value if not specified. zero means delete immediately. |
| `qs.orphanDependents` | Deprecated: please use the PropagationPolicy, this field will be deprecated in 1.7. Should the dependent objects be orphaned. If true&#x2F;false, the &quot;orphan&quot; finalizer will be added to&#x2F;removed from the object&#39;s finalizers list. Either this field or PropagationPolicy may be set, but not both. |
| `qs.propagationPolicy` | Whether and how garbage collection will be performed. Either this field or OrphanDependents may be set, but not both. The default policy is decided by the existing finalizer set in the metadata.finalizers and the resource-specific default policy. |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

#### Body

| Parameter | Description |
| --------- | ----------- |
| `body` | #&#x2F;definitions&#x2F;io.k8s.apimachinery.pkg.apis.meta.v1.DeleteOptions |

### api.v1.namespaces(namespace).pods(name).patch

partially update the specified Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

#### Body

| Parameter | Description |
| --------- | ----------- |
| `body` | #&#x2F;definitions&#x2F;io.k8s.apimachinery.pkg.apis.meta.v1.Patch |

### api.v1.namespaces(namespace).pods(name).put

replace the specified Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

#### Body

| Parameter | Description |
| --------- | ----------- |
| `body` | #&#x2F;definitions&#x2F;io.k8s.kubernetes.pkg.api.v1.Pod |

### api.v1.namespaces(namespace).pods.delete

delete collection of Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.fieldSelector` | A selector to restrict the list of returned objects by their fields. Defaults to everything. |
| `qs.includeUninitialized` | If true, partially initialized resources are included in the response. |
| `qs.labelSelector` | A selector to restrict the list of returned objects by their labels. Defaults to everything. |
| `qs.resourceVersion` | When specified with a watch call, shows changes that occur after that particular version of a resource. Defaults to changes from the beginning of history. When specified for list: - if unset, then the result is returned from remote storage based on quorum-read flag; - if it&#39;s 0, then we simply return what we currently have in cache, no guarantee; - if set to non zero, then the result is at least as fresh as given rv. |
| `qs.timeoutSeconds` | Timeout for the list&#x2F;watch call. |
| `qs.watch` | Watch for changes to the described resources and return them as a stream of add, update, and remove notifications. Specify resourceVersion. |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

### api.v1.namespaces(namespace).pods.post

create a Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `namespace` | object name and auth scope, such as for teams and projects |

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

#### Body

| Parameter | Description |
| --------- | ----------- |
| `body` | #&#x2F;definitions&#x2F;io.k8s.kubernetes.pkg.api.v1.Pod |

## misc

### api.v1.proxy.namespaces(namespace).pods(name)(path).get

proxy GET requests to Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |
| `path` | path to the resource |

### api.v1.proxy.namespaces(namespace).pods(name)(path).delete

proxy DELETE requests to Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |
| `path` | path to the resource |

### api.v1.proxy.namespaces(namespace).pods(name)(path).options

proxy OPTIONS requests to Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |
| `path` | path to the resource |

### api.v1.proxy.namespaces(namespace).pods(name)(path).patch

proxy PATCH requests to Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |
| `path` | path to the resource |

### api.v1.proxy.namespaces(namespace).pods(name)(path).post

proxy POST requests to Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |
| `path` | path to the resource |

### api.v1.proxy.namespaces(namespace).pods(name)(path).put

proxy PUT requests to Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |
| `path` | path to the resource |

### api.v1.proxy.namespaces(namespace).pods(name).get

proxy GET requests to Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

### api.v1.proxy.namespaces(namespace).pods(name).delete

proxy DELETE requests to Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

### api.v1.proxy.namespaces(namespace).pods(name).options

proxy OPTIONS requests to Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

### api.v1.proxy.namespaces(namespace).pods(name).patch

proxy PATCH requests to Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

### api.v1.proxy.namespaces(namespace).pods(name).post

proxy POST requests to Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

### api.v1.proxy.namespaces(namespace).pods(name).put

proxy PUT requests to Pod

#### Path

| Parameter | Description |
| --------- | ----------- |
| `name` | name of the Pod |
| `namespace` | object name and auth scope, such as for teams and projects |

